--- a/src/main/java/vista/interfaces/Personas.fxml
+++ b/src/main/java/vista/interfaces/Personas.fxml
@@ -142,7 +142,7 @@
                                           <Insets />
                                        </GridPane.margin>
                                     </Label>
-                                    <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                    <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
@@ -233,7 +233,7 @@
                                     <TableColumn prefWidth="523.0" text="Dato" />
                                  </columns>
                               </TableView>
-                              <GridPane GridPane.rowIndex="2">
+                              <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" GridPane.rowIndex="2">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="NEVER" minWidth="50.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="200.0" />
@@ -243,10 +243,10 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <Label text="Label" />
-                                    <TextField GridPane.columnIndex="1" />
-                                    <Label text="Label" GridPane.rowIndex="1" />
-                                    <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label text="Tipo" />
+                                    <ComboBox prefWidth="150.0" GridPane.columnIndex="1" />
+                                    <Label text="Dato" GridPane.rowIndex="1" />
+                                    <TextField promptText="Ingrese el contacto" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                  </children>
                               </GridPane>
                            </children>
@@ -258,68 +258,78 @@
                   </Tab>
                   <Tab text="Domicilios">
                      <content>
-                        <GridPane>
+                        <GridPane vgap="10.0">
+                           <children>
+                              <GridPane hgap="10.0">
+                                 <children>
+                                    <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo domicilio" />
+                                    <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
+                                       <GridPane.margin>
+                                          <Insets />
+                                       </GridPane.margin>
+                                    </Button>
+                                    <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
+                                       <GridPane.margin>
+                                          <Insets />
+                                       </GridPane.margin>
+                                    </Button>
+                                    <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar domicilio" GridPane.columnIndex="3" />
+                                 </children>
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="30.0" vgrow="NEVER" />
+                                 </rowConstraints>
+                              </GridPane>
+                              <TableView minHeight="-Infinity" prefHeight="150.0" GridPane.rowIndex="1">
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                                 <columns>
+                                    <TableColumn prefWidth="253.0" text="Provincia" />
+                                    <TableColumn prefWidth="523.0" text="Ciudad" />
+                                    <TableColumn prefWidth="253.0" text="C.P." />
+                                    <TableColumn prefWidth="253.0" text="Dirección" />
+                                 </columns>
+                              </TableView>
+                              <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" GridPane.rowIndex="2">
+                                 <children>
+                                    <Label text="Provinicia" />
+                                    <ComboBox prefWidth="150.0" GridPane.columnIndex="1" />
+                                    <Label text="Ciudad" GridPane.rowIndex="1" />
+                                    <TextField promptText="Ingrese la ciudad" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <TextField promptText="Ingrese la dirección" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <Label text="Dirección" GridPane.rowIndex="3" />
+                                    <TextField promptText="Ingrese el código postal" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <Label text="Código postal" GridPane.rowIndex="2" />
+                                 </children>
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="NEVER" minWidth="50.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="200.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="30.0" vgrow="NEVER" />
+                                    <RowConstraints minHeight="30.0" vgrow="NEVER" />
+                                    <RowConstraints minHeight="30.0" vgrow="NEVER" />
+                                    <RowConstraints minHeight="30.0" vgrow="NEVER" />
+                                 </rowConstraints>
+                              </GridPane>
+                           </children>
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                            </columnConstraints>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
                            <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints />
+                              <RowConstraints />
+                              <RowConstraints />
                            </rowConstraints>
-                           <children>
-                                                      <GridPane styleClass="pane-border" vgap="10.0">
-                                                         <columnConstraints>
-                                                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                                         </columnConstraints>
-                                                         <rowConstraints>
-                                                            <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
-                                                            <RowConstraints vgrow="SOMETIMES" />
-                                                         </rowConstraints>
-                                                         <children>
-                                    <Label text="Dirección" />
-                                    <TextField GridPane.columnIndex="1">
-                                       <GridPane.margin>
-                                          <Insets />
-                                       </GridPane.margin>
-                                    </TextField>
-                                    <Label text="Localidad" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
-                                       <GridPane.margin>
-                                          <Insets />
-                                       </GridPane.margin>
-                                    </Label>
-                                    <TextField GridPane.columnIndex="3">
-                                       <GridPane.margin>
-                                          <Insets />
-                                       </GridPane.margin>
-                                    </TextField>
-                                    <Label text="Provincia" GridPane.rowIndex="1">
-                                       <GridPane.margin>
-                                          <Insets />
-                                       </GridPane.margin>
-                                    </Label>
-                                    <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                       <GridPane.margin>
-                                          <Insets />
-                                       </GridPane.margin>
-                                    </TextField>
-                                    <Label text="Código Postal" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-                                       <GridPane.margin>
-                                          <Insets />
-                                       </GridPane.margin>
-                                    </Label>
-                                    <TextField GridPane.columnIndex="3" GridPane.rowIndex="1">
-                                       <GridPane.margin>
-                                          <Insets />
-                                       </GridPane.margin>
-                                    </TextField>
-                                                         </children>
-                                                         <padding>
-                                                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                         </padding>
-                                                      </GridPane>
-                           </children>
                         </GridPane>
                      </content>
                   </Tab>
@@ -331,7 +341,7 @@
                            </columnConstraints>
                            <rowConstraints>
                               <RowConstraints minHeight="30.0" vgrow="NEVER" />
-                              <RowConstraints minHeight="200.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="200.0" />
                            </rowConstraints>
                            <children>
                                                       <GridPane hgap="10.0">
@@ -363,7 +373,7 @@
                                                             </Button>
                                                          </children>
                                                       </GridPane>
-                                                      <TableView GridPane.rowIndex="1">
+                                                      <TableView maxHeight="200.0" GridPane.rowIndex="1">
                                                         <columns>
                                                           <TableColumn minWidth="-1.0" prefWidth="-1.0" text="Título" />
                                                           <TableColumn maxWidth="1000.0" minWidth="-1.0" prefWidth="-1.0" text="Mayor grado" />
