--- a/src/main/java/vista/interfaces/ListaInformes.fxml
+++ b/src/main/java/vista/interfaces/ListaInformes.fxml
@@ -22,6 +22,9 @@
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
+         <BorderPane.margin>
+            <Insets left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
       </TableView>
    </center>
    <bottom>
