--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -254,7 +254,7 @@
                                     </GridPane>
                                  </top>
                                  <center>
-                                    <TableView minHeight="-Infinity" prefHeight="150.0" BorderPane.alignment="CENTER">
+                                    <TableView fx:id="tblCargosDocentes" minHeight="-Infinity" prefHeight="150.0" BorderPane.alignment="CENTER">
                                        <BorderPane.margin>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </BorderPane.margin>
@@ -313,7 +313,7 @@
                                                 <Insets left="20.0" right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker prefWidth="105.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                                          <DatePicker fx:id="dtpCargosDispHasta" prefWidth="105.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
                                           <Label text="Resolución" GridPane.rowIndex="5">
                                              <GridPane.margin>
                                                 <Insets right="10.0" />
@@ -325,13 +325,13 @@
                                                 <Insets left="20.0" right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                                          <DatePicker fx:id="dtpCargosResDesde" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                                           <Label text="Hasta" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
                                              <GridPane.margin>
                                                 <Insets left="20.0" right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker prefWidth="105.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                                          <DatePicker fx:id="dtpCargosResHasta" prefWidth="105.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
                                           <Label text="Último costo" GridPane.rowIndex="6">
                                              <GridPane.margin>
                                                 <Insets right="10.0" />
