--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -41,12 +41,12 @@
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1">
+                  <TextField fx:id="txtDocentesLegajo" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3">
+                  <TextField fx:id="txtDocentesNombre" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -63,22 +63,22 @@
             </GridPane>
             <GridPane alignment="BOTTOM_LEFT" GridPane.rowIndex="1">
                <children>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar docente">
+                  <Button fx:id="btnDocentesBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar docente">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo docente" GridPane.columnIndex="1">
+                  <Button fx:id="btnDocentesNuevo" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo docente" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar docente" GridPane.columnIndex="2">
+                  <Button fx:id="btnDocentesEliminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar docente" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Importar último costo" GridPane.columnIndex="3">
+                  <Button fx:id="btnDocentesCosto" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Importar último costo" GridPane.columnIndex="3">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -114,17 +114,17 @@
                                  <children>
                                     <GridPane hgap="10.0">
                                        <children>
-                                          <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
+                                          <Button fx:id="btnDatosGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
+                                          <Button fx:id="btnDatosDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver datos personales" />
+                                          <Button fx:id="btnDatosDatos" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver datos personales" />
                                        </children>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -138,7 +138,7 @@
                                     <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" GridPane.rowIndex="1">
                                        <children>
                                           <Label text="Documento" />
-                                          <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1">
+                                          <TextField fx:id="txtDatosDocumento" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
@@ -148,18 +148,18 @@
                                                 <Insets />
                                              </GridPane.margin>
                                           </Label>
-                                          <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                          <TextField fx:id="txtDatosNombre" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
                                           </TextField>
-                                          <Button maxWidth="200.0" mnemonicParsing="false" text="Seleccionar persona" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                          <Button fx:id="btnDatosPersonas" maxWidth="200.0" mnemonicParsing="false" text="Seleccionar persona" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
                                           </Button>
                                           <Label text="Legajo" GridPane.rowIndex="3" />
-                                          <TextField promptText="Ingrese el legajo" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                          <TextField fx:id="txtDatosLegajo" promptText="Ingrese el legajo" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
@@ -169,13 +169,13 @@
                                                 <Insets />
                                              </GridPane.margin>
                                           </Label>
-                                          <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                          <ComboBox fx:id="cmbDatosCategoria" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="5">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
                                           </ComboBox>
                                           <Label text="Estado" GridPane.rowIndex="4" />
-                                          <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                                          <ComboBox fx:id="cmbDatosEstado" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
@@ -388,7 +388,7 @@
                                 </rowConstraints>
                                  <children>
                                     <Label text="Categoría de investigación" />
-                                    <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
+                                    <TextField fx:id="txtInvestigacionCategoria" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
                                  </children>
                                  <BorderPane.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -396,7 +396,7 @@
                               </GridPane>
                            </top>
                            <center>
-                              <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                              <TableView fx:id="tblProyectos" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                                 <columns>
                                   <TableColumn prefWidth="75.0" text="ID proyecto" />
                                   <TableColumn prefWidth="75.0" text="Nombre proyecto" />
@@ -417,17 +417,17 @@
                            <top>
                               <GridPane BorderPane.alignment="CENTER">
                                  <children>
-                                    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
+                                    <Button fx:id="btnIncentivosGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
+                                    <Button fx:id="btnIncentivosDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button contentDisplay="CENTER" layoutX="420.0" layoutY="11.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar incentivo" GridPane.columnIndex="3">
+                                    <Button fx:id="btnIncentivosEliminar" contentDisplay="CENTER" layoutX="420.0" layoutY="11.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar incentivo" GridPane.columnIndex="3">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
@@ -448,7 +448,7 @@
                               </GridPane>
                            </top>
                            <center>
-                              <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                              <TableView fx:id="tblIncentivos" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                                 <columns>
                                   <TableColumn prefWidth="75.0" text="Año" />
                                 </columns>
@@ -467,7 +467,7 @@
                      <content>
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
                            <center>
-                              <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Ingrese aquí las observaciones" BorderPane.alignment="CENTER">
+                              <TextArea fx:id="txtaObservaciones" prefHeight="200.0" prefWidth="200.0" promptText="Ingrese aquí las observaciones" BorderPane.alignment="CENTER">
                                  <BorderPane.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </BorderPane.margin>
@@ -476,12 +476,12 @@
                            <top>
                               <GridPane BorderPane.alignment="CENTER">
                                  <children>
-                                    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
+                                    <Button fx:id="btnObservacionesGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
+                                    <Button fx:id="btnObservacionesDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
